<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutApp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="6"
            android:layout_below="@+id/textView"
            android:layout_margin="10dp"
            android:text="@string/app_des"
            android:textSize="18dp"
            android:textColor="@color/textcolor"
            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
            android:layout_below="@id/textView2"
            android:text="@string/features"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/textView3"
            android:text="@string/features_dec"
            android:textSize="18dp"
            android:textColor="@color/textcolor"/>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/textView4"
            android:text="@string/contact"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/textView5"
            android:text="@string/emails"
            android:textSize="18dp"
            android:textColor="@color/textcolor"/>



    </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>