<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RaiseRequest"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginLeft="20dp"

            >

            <EditText
                android:id="@+id/edhospitalname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hospital_name"
                android:inputType="text"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:textStyle="bold"
                android:background="@drawable/txt_background"
                android:layout_gravity="center"
                />
            <Spinner
                android:id="@+id/statespinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:textStyle="bold"
                android:background="@drawable/txt_background"
                android:layout_gravity="center"
                android:layout_below="@+id/edhospitalname"
                />

            <EditText
                android:id="@+id/edzone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:textStyle="bold"
                android:background="@drawable/txt_background"
                android:layout_gravity="center"
                android:layout_below="@+id/statespinner"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:textStyle="bold"
                android:background="@drawable/txt_background"
                android:layout_gravity="center"
                android:layout_below="@+id/edzone"

                />

            <EditText
                android:id="@+id/edphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:textStyle="bold"
                android:background="@drawable/txt_background"
                android:layout_gravity="center"
                android:layout_below="@+id/spinner"
                android:maxLength="10"
                />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edphone"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/butn_background"
                android:text="@string/save"
                android:textStyle="bold"/>

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>